# ai-research-assistant

./: .dockerignore  .gitignore  Dockerfile  FRONTEND_SPEC.md  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  planner.py  rag_agent.py  reasoning.py
app/core/: logger.py
app/llm/: __init__.py  client.py  huggingface.py
app/retriever/: __init__.py  pinecone_retriever.py  rag.py
app/schemas/: __init__.py  chat.py  requests.py  responses.py
data/ingestion/: .gitkeep
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
notebooks/: test_assistant.ipynb
